@@ -31,18 +31,18 @@ import org.apache.nutch.storage.WebPage;
 import org.apache.nutch.util.ObjectCache;
 import org.w3c.dom.DocumentFragment;
 
-/** Creates and caches {@link HtmlParseFilter} implementing plugins.*/
-public class HtmlParseFilters {
+/** Creates and caches {@link ParseFilter} implementing plugins.*/
+public class ParseFilters {
 
-  private HtmlParseFilter[] htmlParseFilters;
+  private ParseFilter[] parseFilters;
 
   public static final String HTMLPARSEFILTER_ORDER = "htmlparsefilter.order";
 
-  public HtmlParseFilters(Configuration conf) {
+  public ParseFilters(Configuration conf) {
     String order = conf.get(HTMLPARSEFILTER_ORDER);
     ObjectCache objectCache = ObjectCache.get(conf);
-    this.htmlParseFilters = (HtmlParseFilter[]) objectCache.getObject(HtmlParseFilter.class.getName());
-    if (htmlParseFilters == null) {
+    this.parseFilters = (ParseFilter[]) objectCache.getObject(ParseFilter.class.getName());
+    if (parseFilters == null) {
       /*
        * If ordered filters are required, prepare array of filters based on
        * property
@@ -51,45 +51,45 @@ public class HtmlParseFilters {
       if (order != null && !order.trim().equals("")) {
         orderedFilters = order.split("\\s+");
       }
-      HashMap<String, HtmlParseFilter> filterMap =
-        new HashMap<String, HtmlParseFilter>();
+      HashMap<String, ParseFilter> filterMap =
+        new HashMap<String, ParseFilter>();
       try {
-        ExtensionPoint point = PluginRepository.get(conf).getExtensionPoint(HtmlParseFilter.X_POINT_ID);
+        ExtensionPoint point = PluginRepository.get(conf).getExtensionPoint(ParseFilter.X_POINT_ID);
         if (point == null)
-          throw new RuntimeException(HtmlParseFilter.X_POINT_ID + " not found.");
+          throw new RuntimeException(ParseFilter.X_POINT_ID + " not found.");
         Extension[] extensions = point.getExtensions();
         for (int i = 0; i < extensions.length; i++) {
           Extension extension = extensions[i];
-          HtmlParseFilter parseFilter = (HtmlParseFilter) extension.getExtensionInstance();
+          ParseFilter parseFilter = (ParseFilter) extension.getExtensionInstance();
           if (!filterMap.containsKey(parseFilter.getClass().getName())) {
             filterMap.put(parseFilter.getClass().getName(), parseFilter);
           }
         }
-        HtmlParseFilter[] htmlParseFilters = filterMap.values().toArray(new HtmlParseFilter[filterMap.size()]);
+        ParseFilter[] htmlParseFilters = filterMap.values().toArray(new ParseFilter[filterMap.size()]);
         /*
          * If no ordered filters required, just get the filters in an
          * indeterminate order
          */
         if (orderedFilters == null) {
-          objectCache.setObject(HtmlParseFilter.class.getName(), htmlParseFilters);
+          objectCache.setObject(ParseFilter.class.getName(), htmlParseFilters);
         }
         /* Otherwise run the filters in the required order */
         else {
-          ArrayList<HtmlParseFilter> filters = new ArrayList<HtmlParseFilter>();
+          ArrayList<ParseFilter> filters = new ArrayList<ParseFilter>();
           for (int i = 0; i < orderedFilters.length; i++) {
-            HtmlParseFilter filter = filterMap
+            ParseFilter filter = filterMap
             .get(orderedFilters[i]);
             if (filter != null) {
               filters.add(filter);
             }
           }
-          objectCache.setObject(HtmlParseFilter.class.getName(), filters
-              .toArray(new HtmlParseFilter[filters.size()]));
+          objectCache.setObject(ParseFilter.class.getName(), filters
+              .toArray(new ParseFilter[filters.size()]));
         }
       } catch (PluginRuntimeException e) {
         throw new RuntimeException(e);
       }
-      this.htmlParseFilters = (HtmlParseFilter[]) objectCache.getObject(HtmlParseFilter.class.getName());
+      this.parseFilters = (ParseFilter[]) objectCache.getObject(ParseFilter.class.getName());
     }
   }
 
@@ -98,9 +98,9 @@ public class HtmlParseFilters {
       HTMLMetaTags metaTags, DocumentFragment doc) {
 
     // loop on each filter
-    for (HtmlParseFilter htmlParseFilter : htmlParseFilters) {
+    for (ParseFilter parseFilter : parseFilters) {
       // call filter interface
-      parse = htmlParseFilter.filter(url, page, parse, metaTags, doc);
+      parse = parseFilter.filter(url, page, parse, metaTags, doc);
 
       // any failure on parse obj, return
       if (!ParseStatusUtils.isSuccess(parse.getParseStatus())) {
@@ -113,7 +113,7 @@ public class HtmlParseFilters {
 
   public Collection<WebPage.Field> getFields() {
     Collection<WebPage.Field> fields = new HashSet<WebPage.Field>();
-    for (HtmlParseFilter htmlParseFilter : htmlParseFilters) {
+    for (ParseFilter htmlParseFilter : parseFilters) {
       Collection<WebPage.Field> pluginFields = htmlParseFilter.getFields();
       if (pluginFields != null) {
         fields.addAll(pluginFields);
