@@ -33,8 +33,8 @@
       name="Nutch Content Parser"/>
  
 <extension-point
-      id="org.apache.nutch.parse.HtmlParseFilter"
-      name="HTML Parse Filter"/>
+      id="org.apache.nutch.parse.ParseFilter"
+      name="Parse Filter"/>
 
 <extension-point
       id="org.apache.nutch.protocol.Protocol"
